# mathloop

./: .gitignore  HANDOFF.md  README.md  extract_answers.py  index.html  package-lock.json  package.json  tailwind.config.ts
book/: extract_book002.py  test_extract_book002.py
docs/CODEMAPS/: INDEX.md  backend.md  data-flow.md  database.md  frontend.md
docs/superpowers/plans/: 2026-05-18-book002-pdf-extraction.md  2026-05-18-multi-book-support.md
docs/superpowers/specs/: 2026-05-18-book002-pdf-extraction-design.md  2026-05-18-multi-book-support-design.md  brief-pdf-extraction.md
public/: books.json  migrate.html
public/data/: question-crop-audit.json  question-image-fixes.json  questions.json
scripts/: recover_tips.py  repair_question_images.py
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx
src/components/common/: EmptyState.tsx
src/components/dashboard/: StatCard.tsx
src/components/layout/: AppShell.tsx  (+1 more)
src/hooks/: useAssetUrl.ts  useBeforeUnloadSave.ts
src/pages/: BackupPage.tsx  DashboardPage.tsx  MistakeEntryPage.tsx  QuestionDetailPage.tsx  QuestionListPage.tsx  ReviewPage.tsx
src/services/: backupService.ts  dashboardStats.ts  desktopBridge.ts  fsrsService.ts  librarySyncService.ts  mistakeLookup.ts  questionLoader.ts  reviewPersistStorage.ts  reviewQueue.ts
src/store/: useBookStore.ts  useQuestionStore.ts  useReviewStore.ts
src/types/: book.ts  question.ts  review.ts
src/utils/: bookId.ts  date.ts  questionFilters.ts  questionImages.ts  questionStats.ts  reviewLabels.ts
(+4 files in other folders)
